--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,6 +36,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
+        pip install torch==1.8.1+cu111 torchvision==0.9.1+cu111 torchaudio==0.8.1 -f https://download.pytorch.org/whl/torch_stable.html
         pip install matplotlib==3.4.2 -i https://pypi.tuna.tsinghua.edu.cn/simple/
         pip install scikit-learn==1.2.2 -i https://pypi.tuna.tsinghua.edu.cn/simple/
         pip install transformers==4.29.1 -i https://pypi.tuna.tsinghua.edu.cn/simple/
