--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,3 +41,4 @@ jobs:
         pip install scikit-learn==1.2.2 -i https://pypi.tuna.tsinghua.edu.cn/simple/
         pip install transformers==4.29.1 -i https://pypi.tuna.tsinghua.edu.cn/simple/
         pip install pillow==9.5.0 -i https://pypi.tuna.tsinghua.edu.cn/simple/
+        pip install pyqt5==5.15.9	-i https://pypi.tuna.tsinghua.edu.cn/simple/
